--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -22,6 +22,7 @@
                 </div>
                 <button id="scanLibrary" class="btn btn-primary">📚 Scan Library</button>
                 <button id="settingsBtn" class="btn btn-secondary">⚙️</button>
+                <button id="refreshLibrary" class="btn btn-secondary">🔄</button>
             </div>
         </header>
 
