anilist api instead of MAL api

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -21,9 +21,10 @@
                     <button id="searchBtn" class="btn btn-icon">🔍</button>
                 </div>
                 <button id="scanLibrary" class="btn btn-primary">📚 Scan Library</button>
+                <button id="refreshLibrary" class="btn btn-secondary">🔄 Refresh</button>
+                <button id="resetLibrary" class="btn btn-warning">🗑️ Reset</button>
                 <button id="settingsBtn" class="btn btn-secondary">⚙️</button>
-                <button id="refreshLibrary" class="btn btn-secondary">🔄</button>
-            </div>
+             </div>
         </header>
 
         <main class="app-main">
