anime details modal functionality has been added

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -81,7 +81,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2 id="modalTitle">Anime Title</h2>
-                    <button id="closeModal" class="btn btn-icon">✕</button>
+                    <button id="closeAnimeModal" class="btn btn-icon">✕</button>
                 </div>
                 <div class="modal-body">
                     <div class="anime-details">
