tried to make save settings

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -158,6 +158,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <button id="saveSettings" class="btn btn-primary">Save</button>
+                    <button id="cancelSettings" class="btn btn-secondary">Cancel</button>
+                </div>
             </div>
         </div>
     </div>
