--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,7 +12,7 @@
     <div id="app">
         <header class="app-header">
             <div class="app-title">
-                <h1>🎌 AniPlay</h1>
+                <h1><span class="appIcon"> </span> AniPlay</h1>
                 <span class="subtitle">Anime Library Manager</span>
             </div>
             <div class="header-controls">
